# recorules

./: .gitignore  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
recorules/: __init__.py  __main__.py  app.py  calculator.py  config.py  database.py  duration.py  errors.py  holidays.py  models.py
recorules/recoru/: __init__.py  attendance_chart.py  recoru_session.py
recorules/widgets/: __init__.py  calendar_table.py  plan_dialog.py  stats_panel.py
tests/: __init__.py  test_calculation_logic.py  test_calculator.py  test_database.py  test_duration.py  test_merge_logic.py
