[project]
name = "recorules"
version = "0.1.0"
description = "TUI planning tool for Recoru time tracking with workplace rules"
authors = [
    { name = "DorskFR", email = "dorsk.dev@gmail.com" }
]
dependencies = [
    "textual>=0.86.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.0",
    "jpholiday>=0.1.10",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.9.6",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "vulture>=2.14",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["recorules"]

[tool.mypy]
cache_dir = ".cache/mypy_cache"

[[tool.mypy.overrides]]
module = "jpholiday"
ignore_missing_imports = true

[tool.ruff]
cache-dir = ".cache/ruff_cache"
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # Bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle error
    "EM",    # flake8-errmsg
    "ERA",   # eradicate
    "F",     # pyflakes
    "FBT",   # flake8-boolean-trap
    "FIX",   # flake8-fixme
    "INT",   # flake8-gettext
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PLE",   # pylint error
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T20",   # flake8-print
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle warning
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "A003",   # Class attribute {name} is shadowing a Python builtin
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "ERA001", # Found commented-out code
    "FIX002", # Line contains TODO, consider resolving the issue
    "S101",   # Use of assert detected
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.pytest.ini_options]
addopts = "-s -x -v"
cache_dir = ".cache/pytest_cache"